--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -4,12 +4,8 @@ WORKDIR /app
 
 COPY . /app
 
-RUN npm install serve -g
-
 RUN npm install
-
-RUN npm run build
 
 EXPOSE 3000
 
-CMD ["npm", "run", "serve"]
+CMD ["npm", "run", "dev"]
